--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "razorpay": "^2.9.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.13.0",
     "sqlite3": "^5.1.7"
   }
