--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,25 @@ services:
     restart: always
     ports:
       - "8000:3000" # Expose on port 8000 (avoid conflict with existing Nginx on port 80)
+    env_file:
+      - .env
     environment:
       - NODE_ENV=production
       - PORT=3000
       - DB_TYPE=postgres
       - DATABASE_URL=postgresql://postgres:postgrespassword@db:5432/ecommerce
-      # Add PhonePe keys here or in .env file
+      # PhonePe Keys
+      - PHONEPE_CLIENT_ID=${PHONEPE_CLIENT_ID}
+      - PHONEPE_CLIENT_SECRET=${PHONEPE_CLIENT_SECRET}
+      - PHONEPE_CLIENT_VERSION=${PHONEPE_CLIENT_VERSION}
       - PHONEPE_MERCHANT_ID=${PHONEPE_MERCHANT_ID}
-      - APP_BE_URL=http://your-domain.com
+      - PHONEPE_AUTH_URL=${PHONEPE_AUTH_URL}
+      - PHONEPE_PAY_URL=${PHONEPE_PAY_URL}
+      # Webhook
+      - PHONEPE_WEBHOOK_USERNAME=${PHONEPE_WEBHOOK_USERNAME}
+      - PHONEPE_WEBHOOK_PASSWORD=${PHONEPE_WEBHOOK_PASSWORD}
+      # App
+      - APP_BE_URL=${APP_BE_URL}
     depends_on:
       - db
     networks:
