Premium payment pages, dark green admin panel, sidebar fix, callback redirects
- Redesigned PaymentSuccess/Failure/Pending with animated SVGs, glassmorphism, gradients
- Rewrote PaymentStatus.css with premium plant-themed styles
- Changed admin panel color scheme to dark green (#1A4D2E)
- Fixed sidebar admin link to use <a> tag for full page navigation
- Fixed GET callback fallback to redirect to /payment/failure
- Set APP_BE_URL and APP_FE_URL to rasobhoomiplantation.com
- Added APP_FE_URL to docker-compose.yml

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,9 @@ DB_TYPE=sqlite
 # PHONEPE_SALT_INDEX=1
 # PHONEPE_HOST_URL=https://api-preprod.phonepe.com/apis/pg-sandbox
 
-# App URL (For Callbacks)
-APP_BE_URL=http://localhost:3000
+# App URL (For Callbacks & Redirects)
+APP_BE_URL=https://rasobhoomiplantation.com
+APP_FE_URL=https://rasobhoomiplantation.com
 
 # Admin Security
 ADMIN_PASSCODE=your-secure-admin-password
